--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -21,7 +21,7 @@ Sukurto įrankio architektūra pateikiama paveiksle \ktufigref{images/architektu
 \item sąsaja
 \item branduolys
 \end{enumerate}
-Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui, branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinklamu formatu.
+Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui, branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinklamu formatu. Programinio įrankio išeities kodas pateikiamas prieduose \vref{priedas:frontend}.
 
 Branduolio komponente vykdomas modelio pritaikymas. Jį sudaro klasė \texttt{ClassifierController} bei duomenų saugyklos kenksmingų ir nekenksmingų svetainių PageRank įverčiams.
 
