--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -99,6 +99,8 @@
 \renewcommand{\reftextfaraway}{(žr. psl. \pageref}
 \renewcommand{\reftextfacebefore}{ankstesniame puslapyje}
 \renewcommand{\reftextbefore}{ankstesniame puslapyje}
+\renewcommand{\reftextfaceafter}{kitame puslapyje}
+\renewcommand{\reftextafter}{kitame puslapyje}
 \newminted{pascal}{linenos=true,baselinestretch=1,samepage=false,frame=leftline}
 \newminted{text}{linenos=false,baselinestretch=1,samepage=false}
 \renewcommand\theFancyVerbLine{\lstfont\arabic{FancyVerbLine}}
