--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -1,5 +1,5 @@
-\newcommand{\ktusubject}{Grafų ir tinklų klasterizavimo metodų palyginimas  nustatant klientų  rizikingas veiklas  pagal socialinių tinklų duomenis}
-\newcommand{\ktutitle}{Baigiamasis magistro projektas}
+\newcommand{\ktusubject}{Baigiamasis magistro projektas}
+\newcommand{\ktutitle}{Grafų ir tinklų klasterizavimo metodų palyginimas  nustatant klientų  rizikingas veiklas pagal socialinių tinklų duomenis}
 \newcommand{\ktuyear}{2017}
 \newcommand{\ktudate}{\ktuyear-06-02}
 \newcommand{\ktucity}{Kaunas}
@@ -7,7 +7,8 @@
 \newcommand{\ktufaculty}{Matematikos ir gamtos mokslų fakultetas}
 \newcommand{\ktucathedral}{Taikomosios matematikos katedra}
 \newcommand{\ktuauthor}{Andrius Dapševičius}
-\newcommand{\ktumaster}{Doc. dr. Vytautas Janilionis}
+\newcommand{\ktumastera}{doc. dr. Vytautas Janilionis}
+\newcommand{\ktumasterb}{prof. dr. Rimantas Gatautis}
 
 
 \newcommand{\kclong}[1]{\cite{#1}}
