--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -301,35 +301,33 @@
       } \\
       \fontsize{16pt}{16pt}\selectfont {
         \MakeUppercase \ktufaculty
-      } \\
-      \fontsize{14pt}{14pt}\selectfont {
-        \MakeUppercase \ktucathedral
-      } \\[2.5cm]
-      \fontsize{22pt}{22pt}\selectfont {
+      } \\[110pt]
+      \fontsize{16pt}{16pt}\selectfont {
+       \ktuauthor
+       } \\[50pt]
+      \fontsize{16pt}{16pt}\selectfont {
         \MakeUppercase \ktutitle
-      } \\[1cm]
+      } \\[20pt]
     }
-    \fontsize{16pt}{16pt}\selectfont {
+    \fontsize{14pt}{14pt}\selectfont {
       \ktusubject
     }
-    \\[3.5cm]
+    \\[70pt]
   \end{center}
 
-  \textbf {
     \begin{flushright}
-      \begin{tabular}{ r l }
-         {Atliko:} & {\ktuauthor} \\
-         {Vadovas:} & {\ktumaster} \\
-         {Data:} & {\ktudate} \\
+      \begin{tabular}{ l }
+         \textbf{Vadovai:}  \\
+         \ktumastera \\
+         \ktumasterb \\
       \end{tabular}
     \end{flushright}
-  }
 
   \vfill
 
   \begin{center}
     \textbf {
-      \fontsize{16pt}{16pt}\selectfont {
+      \fontsize{12pt}{12pt}\selectfont {
         \MakeUppercase \ktucity, \ktuyear
       }
     }
