--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -1,5 +1,5 @@
 \newcommand{\ktusubject}{Baigiamasis magistro projektas}
-\newcommand{\ktutitle}{Grafų ir tinklų klasterizavimo metodų palyginimas  nustatant klientų  rizikingas veiklas pagal socialinių tinklų duomenis}
+\newcommand{\ktutitle}{Kenksmingų interneto tinklalapių identifikavimo modelis}
 \newcommand{\ktuyear}{2017}
 \newcommand{\ktudate}{\ktuyear-06-02}
 \newcommand{\ktucity}{Kaunas}
@@ -56,6 +56,13 @@
 \begin{document}
 
 \ktuinit{}    
+
+\newpage
+
+\chapter[Summary]{\MakeUppercase{Summary}}\label{sec:Summary}
+\chapter[Santrauka]{\MakeUppercase{Santrauka}}\label{sec:Santrauka}
+
+\newpage
 
 \ktuchapter{Įžanga}
 
