--- a/docs/metodas/metodai.tex
+++ b/docs/metodas/metodai.tex
@@ -3,10 +3,10 @@
 Lyginami du klasifikavimo modeliai:
 \begin{enumerate}
 \item C4.5 sprendimų medis
-\item atraminių vektorių mašinos
+\item atramos vektorių mašinos
 \end{enumerate}
 
 \ktusubsection{C4.5 sprendimų medžio klasifikatorius}
 \input{metodas/medis.tex}
-\ktusubsection{Atraminių vektorių mašinų klasifikatorius}
+\ktusubsection{Atramos vektorių mašinų klasifikatorius}
 \input{metodas/vektoriai.tex}
