--- a/docs/metodas/mokymas.tex
+++ b/docs/metodas/mokymas.tex
@@ -1,4 +1,4 @@
-\ktusection{Modelių formavimas}
+\ktusection{Modelių sudarymas}
 
 Supaprastinta modelio schema yra pateikiama \ktufigref{images/mokymas.png} paveiksle.
 \ktufigure{images/mokymas.png}{13 cm}{Modelio formavimo schema}
