--- a/docs/metodas/vektoriai.tex
+++ b/docs/metodas/vektoriai.tex
@@ -1,8 +1,8 @@
-Atraminių vektorių metodas naudojamas klasifikuoti daugelio matmenų vektorius į dvi klases \cite{comp}. Tai atliekama atskiriant objektus erdvėje naudojant tam tikrą hiperplokštumą. Tai vaizduojama \ktufigref{images/svm.png} paveiksle. Objektų erdvė yra transformuojama naudojant kernelio funkciją, kuri leidžia parinkti tokią erdvę kurioje klasių atskyrimas naudojant hiperplokštumą yra įmanomas.
+Atramos vektorių metodas naudojamas klasifikuoti daugelio matmenų vektorius į dvi klases \cite{comp}. Tai atliekama atskiriant objektus erdvėje naudojant tam tikrą hiperplokštumą. Tai vaizduojama \ktufigref{images/svm.png} paveiksle. Objektų erdvė yra transformuojama naudojant kernelio funkciją, kuri leidžia parinkti tokią erdvę kurioje klasių atskyrimas naudojant hiperplokštumą yra įmanomas.
 
-\ktufigure{images/svm.png}{8 cm}{Supaprastinta atraminių vektorių mašinų metodo schema}.
+\ktufigure{images/svm.png}{8 cm}{Supaprastinta atramos vektorių mašinų metodo schema}.
 
-Atraminių vektorių mašinos modelis yra kaip \cite{comp}:
+Atramos vektorių mašinos modelis yra kaip \cite{comp}:
 \begin{equation}
     h(x) = b + \sum_{n=1}^{N}y_i \alpha_i K(x, x_i)
 \end{equation}
