--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -55,13 +55,8 @@
 
 \begin{document}
 
-\ktuinit{}    
-
-\newpage
-
-\chapter[Summary]{\MakeUppercase{Summary}}\label{sec:Summary}
-\chapter[Santrauka]{\MakeUppercase{Santrauka}}\label{sec:Santrauka}
-
+\ktuinit{}
+\includepdf{santrauka.pdf}
 \newpage
 
 \ktuchapter{Įžanga}
