--- a/docs/taikymas/bandymas.tex
+++ b/docs/taikymas/bandymas.tex
@@ -1,4 +1,4 @@
-\ktusection{Praktinis įrankio bandymas}
+\ktusection{Praktinis įrankio taikymas}
 
 Sukurtas įrankis bandytas panaudoti naudojant kelias nepavojingas interneto svetaines. Dalis iš bandytų tinklalapių pateikiama lentelėje \vref{tab:bandymas}.
 
