--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -1,4 +1,4 @@
-\ktusection{Modelio praktinis pritaikymas}
+\ktusection{Modelio naudojimas įrankio kūrimui}
 
 Apmokytas modelis yra paruoštas naudojimui, tačiau jis nėra itin patogus. Naudojamos programinės įrangos modelis gali būt ipanaudojamas per komandinės eilutės sąsają, pateikiant duomenis mokymo metu naudotu formatu. Modelio grąžinamas rezultatas taip pat nėra lengvai suvokiamas. Dėl to yra kuriama taikomoji aplikacija kuri supaprastina modelio panaudojimą realiose, praktinėse situacijose.
 
