--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -333,7 +333,8 @@
     }
   \end{center}
 \end{titlepage}
-
+\includepdf{antrasTitulinis.pdf}
+\clearpage\includepdf{deklaracija.pdf}
 \clearpage\tableofcontents
 \clearpage\conditionalLoF
 \clearpage\conditionalLoT
