fixing shit in app section

--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -10,12 +10,12 @@ Modeliai formuojami naudojant įvairius metodus, tačiau dalinimas į mokymo, te
 \ktusection{Darbo tikslas ir uždavinys}
 Pavojingi puslapiai skirstomi į skirtingas kategorijas pagal jų vykdomą \cite{tax} ir pagal jų paskirtį žalingų puslapių tinkle \cite{linchpins}. Jų aptikimui naudojami įvairūs metodai \cite{comp}. Šiame darbe bus tobulinamas tokių puslapių aptikimas, naudojant interneto grafo bei puslapių URL informaciją.
 
-Dabro tikslas -- pasiūlyti metodiką ir sukurti įrankį kenksmingų ir nekenksmingų tinklalapių klasifikavimui, kur kenksmingi tinklalapiai yra pavojingų tinklalapių sąrašuose aptinkami adresai, ir įvertinti PageRank įverčio panaudojimą kenksmingų tinklalapių klasifikavimui.
+Darbo tikslas -- pasiūlyti metodiką ir sukurti įrankį kenksmingų ir nekenksmingų tinklalapių klasifikavimui, kur kenksmingi tinklalapiai yra pavojingų tinklalapių sąrašuose aptinkami adresai.
 
 Sprendžiami uždaviniai:
 \begin{enumerate}
-    \item apžvelgti klasifikavimo metodus naudojamus kenksmingų tinklalapių klasifikavimui;
-    \item sukurti programinę įrangą skirtą tinklalapių klasifikavimui į kenksmingus ir nekenksmingus;
-    \item įvertinti PageRank įverčio panaudojimą;
-    \item pritaikyti metodą suformuotam duomenų rinkiniui.
+    \item klasifikavimo modelių bei sąvybių vektoriaus formavimo metodo parinkimas;
+    \item metodikos klasifikavimo uždaviniui spręsti sukūrimas;
+    \item programinio įrankio klasifikavimui kūrimas;
+    \item pritaikymas naudojant realų duomenų rinkinį.
 \end{enumerate}
