--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -97,10 +97,10 @@ Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinkla
 \ktuchapter{Išvados}
 
 \begin{enumerate}[label=\arabic*.]
-\item Apžvelgus kensmingų tinklalapių klasifikavimo metodus pasiūlyta naudoti PageRank įverčius topologinei svetainių grafo informacijai panaudoti klasifikavimo modelių formavime
-\item Sudaryta kenksmingų tinklalapių klasifikavimo metodika
+\item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank įverčius topologinei svetainių grafo informacijai panaudoti sąvybių vektoriaus formavime
+\item Sukurta metodika kenksmingų tinklalapių klasifikavimui
 \item Įgyvendinta pasiūlyta metodologija sukuriant mašininio mokymo modelius bei sukurtas programinis įrankis praktiniam modelio panaudojimui
-\item Įvertintas sukurto įrankio praktinis panaudojimas bei įrankio trūkumai: lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius.
+\item Sukurtas įrankis naudotas su realiu duomenų rininiu, įvertinti įrankio trūkumai: lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius ir privalumai.
 \end{enumerate}
 
 \newpage
@@ -123,9 +123,6 @@ Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinkla
 \label{priedas:frontend}
 \ktusrcr{ClassifierController.scala}{apps/src/main/scala/andriusdap/orbweaver/controllers/ClassifierController.scala}{scala}
 \ktusrcr{Classifier.scala}{apps/src/main/scala/andriusdap/orbweaver/core/Classifier.scala}{scala}
-%\ktusrcr{routes}{apps/src/main/resources/routes}{scala}
-%\ktusrcr{application.conf}{apps/src/main/resources/application.conf}{scala}
-%\ktusrcr{application.properties}{apps/src/main/resources/application.properties}{scala}
 \ktusrcr{test.sh}{apps/test.sh}{scala}
 
 \end{ktuappendices}
